Bonus-task-Ques2/jenkins.yaml
apiVersion: v1
kind: Pod
metadata:
  name : jenkins
spec:
  containers:
    - name: jenkins
      image: jenkins/jenkins:lts
      ports:
        - containerPort: 8080
