Bonus-task-Ques2/nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
    group: webapp
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
