Bonus-task-Ques2/wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-pod
  labels:
    app: wordpress
spec:
  containers:
    - name: wordpress
      image: wordpress:latest
      ports:
        - containerPort: 80
