Bonus-task-Ques2/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: group-specific-pods
spec:
  podSelector:
    matchLabels:
      group: webapp
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: jenkins
